<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/edit_menu"
        android:title="Edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"/>

    <item android:id="@+id/add_menu"
        android:title="Add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"/>
</menu>