...
    tools:context=".timer.TimerActivity"
    tools:showIn="@layout/activity_timer"
    android:padding="16dp"
    >

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_timer_tea_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        app:ms_text_color="@color/colorPrimaryDark"
        app:ms_dropdown_height="350dp"
        android:dropDownWidth="match_parent"
        />

    <TextView
        android:id="@+id/text_timer_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/card"
        android:textSize="70sp"
...
